poc independant flip